--- a/examples/2/style.css
+++ b/examples/2/style.css
@@ -6,8 +6,12 @@ h1 {
 p {
 	margin: 0;
 	padding: 0;
-	text-indent: 2em;
-	padding-bottom: 16px;
+	text-indent: 1em;
+	/*padding-bottom: 16px;*/
+}
+
+p:first-of-type {
+	text-indent: 0;
 }
 
 .container {
@@ -37,14 +41,6 @@ p {
 
 .overflowing-child:before {
 	content: "";
-	display: block;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 20px;
-	/*background-image: -webkit-linear-gradient(top, rgba(221,221,221,0) 0%,rgba(221,221,221,1) 100%);*/
-	/*background-color: red;*/
 }
 
 .overflowing-child:after {
@@ -58,5 +54,5 @@ p {
 
 .text {
 	height: 100%;
-	margin-left: 150px;
+	margin-left: 160px;
 }
