Removed incorrect docs

--- a/examples/2/style.css
+++ b/examples/2/style.css
@@ -33,7 +33,7 @@ p:first-of-type {
 
 .overflowing-child {
 	margin-bottom: 9em;
-	padding: 0 !important;
+	padding: 0;
 	overflow: hidden;
 	position: relative;
 }
