--- a/examples/1/style.css
+++ b/examples/1/style.css
@@ -1,44 +1,72 @@
-h1 {
+* {
 	margin: 0;
+	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100%;
+}
+
+h1 {
 	font-size: inherit;
 }
 
 p {
-	margin: 0;
-	padding: 0;
 	text-indent: 1em;
 }
 
-.container {
-	/*width: 956px;*/
-	height: 419px;
-	background-color: #DDD;
-	-webkit-column-count: 3;
-	   -moz-column-count: 2;
-		-ms-column-count: 2;
-			column-count: 2;
-	font-size: 13px;
-	line-height: 25px;
-	position: relative;
-}
 
-.overflowing-child {
+
+.ellipsis-overflowing-child {
 	margin-bottom: 9em;
 	padding: 0 !important;
-	overflow: hidden;
 	position: relative;
 }
 
-.overflowing-child:before {
-	content: "";
-	display: block;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 20px;
-	/*background-image: -webkit-linear-gradient(top, rgba(221,221,221,0) 0%,rgba(221,221,221,1) 100%);*/
-	/*background-color: red;*/
+.ellipsis-overflowing-child .ellipsis-helper {
+	width: 8em;
+	background: -moz-linear-gradient(left, rgba(221,221,221,0) 0%, rgba(221,221,221,1) 100%); /* FF3.6+ */
+	background: -o-linear-gradient(left, rgba(221,221,221,0) 0%,rgba(221,221,221,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left, rgba(221,221,221,0) 0%,rgba(221,221,221,1) 100%); /* IE10+ */
+	background: linear-gradient(to right, rgba(221,221,221,0) 0%,rgba(221,221,221,1) 100%); /* W3C */
+	background: red;
+}
+
+.ellipsis-overflowing-child .ellipsis-helper:after {
+	content: "...";
+	float: right;
+	padding-right: 0.4em;
+}
+
+.container {
+	height: 33.3333%;
+	position: relative;
+	font-size: 13px;
+	line-height: 20px;
+	background-color: #DDD;
+	overflow: hidden;
+}
+
+.container-1 {
+	-webkit-column-count: 1;
+	   -moz-column-count: 1;
+		  -ms-column-count: 1;
+			    column-count: 1;
+}
+
+.container-2 {
+	-webkit-column-count: 2;
+	   -moz-column-count: 2;
+		  -ms-column-count: 2;
+			    column-count: 2;
+}
+
+.container-3 {
+	-webkit-column-count: 3;
+	   -moz-column-count: 4;
+		  -ms-column-count: 3;
+			    column-count: 3;
 }
 
 /*.overflowing-child:after {
